# know_plan

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
NEEMs/contrastive_plans/validation_neem/roslog/: triples.metadata.json
NEEMs/extra_neems/example_manual_1628006868.1534135/roslog/: annotations.bson
NEEMs/extra_neems/example_manual_1628011809.3621716/roslog/: triples.metadata.json
NEEMs/extra_neems/ocra_simple_1646334461.0746279/roslog/: annotations.bson  (+3 more)
cmake/: ontologies.cmake
launch/: map_cra_cs_bringing_object.launch  map_cra_cs_bringing_object_neem_manual_assertion.launch  map_cra_cs_bringing_object_plan_disambiguation_with_recorded_neem.launch  map_cra_cs_filling_tray.launch  map_cra_cs_filling_tray_neem.launch  map_cra_cs_generic.launch  rosplan_cra_cs_cloth_piling_adaptation_neem.launch  rosplan_cra_cs_cloth_piling_adaptation_neem_generation.launch  rosplan_cra_cs_generic.launch  rosplan_full.launch
owl/: ocra.owl  ocra_cloth.owl  ocra_common.owl  ocra_home.owl
owl/maps/: map_cra_cs_bringing_object.owl  map_cra_cs_filling_tray.owl  map_cra_cs_generic.owl  map_cra_cs_piling_cloth.owl  ocra_filling_a_tray_adaptation_full_compartment.owl  ocra_filling_a_tray_adaptation_high_risk.owl  ocra_filling_a_tray_collaboration_type_and_risk.owl  ocra_filling_a_tray_collaboration_type_and_risk_with_negative_hasPlan.owl  ocra_filling_a_tray_with_individuals.owl
pddl/domain/: collaborative_cloth_piling_domain.pddl
pddl/problem/: apartment_problem.pddl  collaborative_cloth_piling_problem_simple.pddl  collaborative_cloth_piling_problem_unfolded_cloth.pddl
pddl/test-domains/match_cellar/: README.md
pddl/test-domains/rovers/: README.md
prolog/: neem_assertion.pl  useful_queries_ocra.pl
rosinstall/: know_cra.rosinstall  know_plan.rosinstall
scripts/: planning_and_neem_generation_for_plan_adaptation.py  planning_for_acxon_objective_evaluation.py  reasoning_with_owlready2.py  rosowlready.py
src/: __init__.pl
src/know_cra/: json_module.py  owlready_wrapper.py  rosplan_cra_module.py
src/know_plan/: rosplan_cra_module.py  rosplan_wrapper.py  rosprolog_wrapper_for_rosplan.py
src/prolog_reasoning/comparative/: plan_comparison.pl
srv/: OwlreadyInsertDeleteQuery.srv  OwlreadyLoadOntology.srv  OwlreadySelectQuery.srv
utils/: owlready2_utils.txt
(+7 files in other folders)
