<package>
  <name>know_plan</name>
  <version>1.0.0</version>
  <description>Basic package to use a knowledge base to represent and reason with knowledge about plans for plan comparison and selection (disambiguation).
  </description>
  <maintainer email="aolivares@iri.upc.edu">Alberto Olivares Alarcos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>comp_spatial</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>comp_spatial</run_depend>
  <run_depend>python-lxml</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdfdom_py</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
